# easy-shop

./: .gitignore  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
mysite/: db.sqlite3  pytest.ini  test_data.json
mysite/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/accounts/migrations/: 0001_initial.py  0002_profile_email.py  0003_alter_avatar_src.py  0004_alter_avatar_src.py  0005_alter_avatar_alt.py  0006_alter_avatar_alt.py  0007_alter_avatar_alt.py  0008_alter_avatar_alt.py  0009_alter_profile_options.py
mysite/cart/: cart.py
mysite/catalog/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
mysite/catalog/migrations/: 0001_initial.py  0002_alter_category_image_alter_category_subcategories_and_more.py  0003_alter_subcategory_image.py  0004_alter_image_src_alter_subimage_src.py  0005_alter_subimage_alt.py  0006_alter_category_subcategories_alter_subimage_alt.py  0007_alter_category_image_alter_subcategory_image.py  0008_alter_category_image.py  0009_alter_subcategory_image.py  0010_productimage_review_specification_tag_product.py  0011_alter_product_category_remove_product_images_and_more.py  0012_review_date.py  0013_alter_product_date_alter_product_description_and_more.py  0014_alter_product_date_alter_product_description_and_more.py  0015_alter_product_date_alter_review_date.py  (+9 more)
mysite/mysite/: settings.py  urls.py
mysite/orders/: admin.py  models.py  serializers.py  urls.py  views.py
mysite/payments/: models.py  serializers.py  urls.py  views.py
mysite/tests/: conftest.py
(+16 files in other folders)
